--- a/css/styles-m-ea.css
+++ b/css/styles-m-ea.css
@@ -125,7 +125,7 @@ div, span {
 .site-banner .header-logo { padding-top: 7px; }
 
 .site-banner .header-logo > a,
-.site-banner .header-logo h1 a { display: block; width: 270px; height: 80px; margin: 0 auto; background-image: url(images/logo-equipauto-2021.png); 
+.site-banner .header-logo h1 a { display: block; width: 350px; height: 160px; margin: 0 auto; background-image: url(images/equipauto-2022-fr.png); 
 	-webkit-background-size: 100% 100%; 
 	        background-size: 100% 100%; 
 }
@@ -1759,3 +1759,8 @@ span.mysel-modal-title-txt {text-transform: uppercase; font-size: 15px; letter-s
 #cxpmClientAccountWidget .widget-icon > span.number { background-color:#44c2ee }
 
 
+html:lang(en) .site-banner .header-logo > a,
+html:lang(en) .site-banner .header-logo h1 a { display: block; width: 350px; height: 160px; margin: 0 auto; background-image: url(images/equipauto-2022-en.png); 
+	-webkit-background-size: 100% 100%; 
+	        background-size: 100% 100%; 
+}
