--- a/css/styles-m-ea.css
+++ b/css/styles-m-ea.css
@@ -1764,3 +1764,18 @@ html:lang(en) .site-banner .header-logo h1 a { display: block; width: 350px; hei
 	-webkit-background-size: 100% 100%; 
 	        background-size: 100% 100%; 
 }
+
+
+.row.label  {display: none; }
+.site-footer .col {padding-bottom:25px; }
+
+   
+   
+.block-page.partner .main-title-with-link { text-align: center; padding-bottom: 0; border: 0; margin: 0; }
+.block-page.partner .main-title-with-link  h2 { font-size: 27px; line-height: 30px; color: #002b4c; font-weight: 900; letter-spacing: 0.15em; text-transform: uppercase; padding: 0 0 40px; border: 0; margin: 0; width: 100%; }
+
+.block-page.partner .partner-gallery  { text-align: center; }
+.block-page.partner .partner-gallery .pg-item-group { display: flex; flex-wrap: wrap; justify-content: center; justify-content: center; max-width: 950px; margin: 0 auto;
+padding-bottom: 50px; }
+
+.block-page.partner .partner-gallery .pg-item-title  { display: none}
